--- a/index.html
+++ b/index.html
@@ -35,6 +35,22 @@
 			</td>
 		</tr>
 		<tr>
+			<td style="width: 20.0000%;"><br></td>
+			<td class="table--workshops-td" style="width: 80.0000%;padding-bottom:10px;border-bottom:1px solid rgba(1,161,221,0.5);padding-top:10px;"><strong>Federal Bonding</strong>
+				<br>
+				<br>The Federal Bonding Program, sponsored by the U.S. Department of Labor, serves as a tool to secure the job placement of ex-offenders and other high-risk applicants by issuing Fidelity bonds to businesses who offer jobs to workers in "at risk" groups. These bonds are business insurance policies that protect the employer in case of any loss of money or property due to employee dishonesty. “At-risk” groups include:
+                 <ul>
+                     <li>Justice involved individuals</li>
+                     <li>Recovering substance abusers (alcohol or drugs)</li>
+                     <li>Welfare recipients and other persons having poor financial credit, or who have declared bankruptcy</li>
+                     <li>Economically disadvantaged youth and adults who lack a work history</li>
+                     <li>Individuals dishonorably discharged from the military</li>
+                     <li>Anyone who cannot secure employment without bonding service</li>
+                 </ul>
+				<br>
+			</td>
+		</tr>
+		<tr>
 			<td style="width: 20.0000%;">
 				<br>
 			</td>
@@ -61,7 +77,7 @@
 				<br>
 			</td>
 		</tr>
-		<tr style="border-bottom:2px solid #01a1dd;">
+		<tr >
 			<td style="width: 20.0000%;">
 				<br>
 			</td>
@@ -76,11 +92,36 @@
 				<br>
 			</td>
 		</tr>
+		<tr style="border-bottom:2px solid #01a1dd;">
+			<td style="width: 20.0000%;">
+				<br>
+			</td>
+			<td class="table--workshops-td" style="width: 80.0000%; padding-bottom:20px;border-bottom:1px solid rgba(1,161,221,0.5);padding-top:10px;"><strong>Conquering Your Career Amidst Crisis</strong>&nbsp;
+				<br>
+				<p>While current times are uncertain, one thing unfortunately isn’t: the unemployment rate. For many who have been laid off or for new college graduates, navigating a chaotic job market adds to already high stress levels. Recruiters and hiring managers know that times are tough and that employment gaps during a pandemic are unavoidable. So, what can new job-seekers do to stand out in a talent pool of thousands who are in the same boat? This webinar will provide attendees with useful data to understand the realities of the current job market while suggesting practical strategies for moving forward with confidence, skill, and optimism.</p>
+<p><strong>About Tricia Zelaya-Leon:</strong></p>
+<p>Tricia Zelaya-Leon earned her Ph.D. in Higher Education and Student Affairs from The Ohio State University in 2011. Her teaching and research interests focus on student identity development theory, the development of second-year college students, engaging students in transition, and infusing career preparation into the academic curriculum.  As the Director of Career Development at Rollins College, Dr. Zelaya-Leon oversees Career Center staff who provide personalized guidance on career discernment, employer engagement, and post-graduate success.</p>
+			</td>
+		</tr>
 		<tr>
 			<td style="width: 20.0000%;padding-top:20px;"><strong>Employers</strong></td>
 			<td class="table--workshops-td" style="width: 80.0000%;padding-top:20px;padding-bottom:10px;border-bottom:1px solid rgba(1,161,221,0.5);"><strong>10 Tips for Interviewing Candidates Virtually (100 seats available)&nbsp;</strong>
 				<br>
 				<br>Job interviews are always challenging, but a virtual interview throws a few more complexities into the mix. The coronavirus is changing the way we conduct our professional lives. A LinkedIn study found that more than half of professionals in the U.S. are now changing their in-person meetings to either phone or video for health and safety reasons. While your questions and conversations may be the same, how you conduct the interview may be different. Join us and learn 10 best practices to get you set up for successful virtual interviews.
+				<br>
+			</td>
+		</tr>
+		<tr>
+			<td style="width: 20.0000%;">
+				<br>
+			</td>
+			<td class="table--workshops-td" style="width: 80.0000%;padding-bottom:20px;border-bottom:1px solid rgba(1,161,221,0.5);padding-top:10px;"><strong>Play the Long Game: A Disney Leadership Journey</strong>
+				<br>
+<p>Business leaders today face unprecedented challenges. An increasingly connected global economy, nonstop technological advances, and rapid demographic shifts are disrupting the business environment on a scale never seen before and we are also in the midst of a global pandemic.  Leaders are being asked to reinvent themselves and their organizations simultaneously. Tried-and-true leadership approaches alone cannot meet this challenge. In the face of this extreme level of change, leaders must either adapt or face the possibility of failure.</p>
+<p>Join us for an interactive and conversational workshop where Dan shares leadership insights and real-life experiences from his various roles at Disney.</p>
+<p>With 26 years of experience with the Walt Disney Company, Dan Cockerell will share his expertise based on his learnings, successes and failures, as well as his perspective on the current pandemic. Dan believes the future is bright and there are many opportunities for those who have a growth mindset, are open to new ideas, and willing to gain diverse experiences.</p>
+<p><strong>About Dan Cockerell (www.dancockerell.com):</strong></p>
+<p>Dan spent 26 years with the Walt Disney Company. He started as a parking attendant at Epcot and worked in 19 different jobs. Dan held various executive operations roles at the Walt Disney World Resort, both in the theme parks and resort hotels, and retired as the Vice President of the Magic Kingdom where he led 12,000 cast members and entertained over 20 million guests annually. After a fulfilling and exciting career Dan made the decision to set out on a new venture and start his own consulting and speaking business.</p>
 				<br>
 			</td>
 		</tr>
