--- a/index.html
+++ b/index.html
@@ -36,6 +36,58 @@
 		</tr>
 		<tr>
 			<td style="width: 20.0000%;"><br></td>
+			<td class="table--workshops-td" style="width: 80.0000%;padding-bottom:10px;border-bottom:1px solid rgba(1,161,221,0.5);padding-top:10px;"><strong>Employ Florida: Tips & Tricks to Navigate</strong>
+				<br>
+				<br>This interactive workshop will demonstrate how to register and use Employ Florida (a powerful online tool specifically designed to help connect employers and job seekers). The workshop will help you navigate the system with confidence and ease.
+
+This workshop provides step by step instruction on how to:<br>
+
+· Register and create a profile<br>
+
+· Add your background information<br>
+
+· Create and upload resumes<br>
+
+· Search and apply for job openings.<br>
+
+This workshop also covers valuable resources within Employ Florida that can help you:<br>
+
+· Create a Virtual Recruiter Job Search Alert<br>
+
+· Assess your skills and preferences (identify an occupation/career to pursue)<br>
+
+· Research the job market for your geographic area<br>
+
+· Research occupations<br>
+
+· Match up your skills and preferences with occupations to find the ideal career<br>
+
+· Locate online learning resources
+			</td>
+		</tr>
+		<tr>
+			<td style="width: 20.0000%;"><br></td>
+			<td class="table--workshops-td" style="width: 80.0000%;padding-bottom:10px;border-bottom:1px solid rgba(1,161,221,0.5);padding-top:10px;"><strong>Job Search Strategies for Older Workers</strong>
+				<br>
+				<br>Are you a mature job seeker in the market for a new position or looking to reenter the workforce after a period of retirement? To prepare for a successful job search when you’re passed 50, you’ll need to get motivated, reposition your skills, create or fine-tune your resume, ramp up your professional networking and look for employment in just the right places.<br>
+This workshop covers the following topics:<br>
+Ageism<br>
+Ways to stand out in the job market<br>
+Job search strategies<br>
+Tips on creating, updating and age-proofing your resume<br>
+Tips on Interviewing<br>
+How to answer important age-related questions during an interview
+			</td>
+		</tr>
+		<tr>
+			<td style="width: 20.0000%;"><br></td>
+			<td class="table--workshops-td" style="width: 80.0000%;padding-bottom:10px;border-bottom:1px solid rgba(1,161,221,0.5);padding-top:10px;"><strong>Empower your small business with Microsoft Teams</strong>
+				<br>
+				<br>This 1-hour workshop will introduce entrepreneurs to Microsoft Teams as a one-stop app that provides businesses easy collaboration through chat, meetings, and calls with deep integration in Office 365 apps and customization with 3rd party apps working seamlessly and securely across processes and devices.
+			</td>
+		</tr>
+		<tr>
+			<td style="width: 20.0000%;"><br></td>
 			<td class="table--workshops-td" style="width: 80.0000%;padding-bottom:10px;border-bottom:1px solid rgba(1,161,221,0.5);padding-top:10px;"><strong>Federal Bonding</strong>
 				<br>
 				<br>The Federal Bonding Program, sponsored by the U.S. Department of Labor, serves as a tool to secure the job placement of ex-offenders and other high-risk applicants by issuing Fidelity bonds to businesses who offer jobs to workers in "at risk" groups. These bonds are business insurance policies that protect the employer in case of any loss of money or property due to employee dishonesty. “At-risk” groups include:
@@ -60,23 +112,7 @@
 				<br>
 			</td>
 		</tr>
-		<tr>
-			<td style="width: 20.0000%;">
-				<br>
-			</td>
-			<td class="table--workshops-td" style="width: 80.0000%;padding-bottom:10px;border-bottom:1px solid rgba(1,161,221,0.5);padding-top:10px;"><strong>Master Your Next Interview&nbsp;</strong>
-				<br>
-				<br>Interviews can be stressful. Being prepared is the key. Join CareerSource and TetraMap to learn how to master your next job interview. This session will provide you with a framework and practical tips you can utilize to have a more successful and productive interview. During this session, you will:
-				<br>
-				<br>· Complete a mini version of the behavioral preference instrument TetraMap to identify your natural preference
-				<br>
-				<br>· Define and identify key behaviors for each of the preferences
-				<br>
-				<br>· Understand how to apply this knowledge during interviews to showcase your versatility and talents
-				<br>
-				<br>
-			</td>
-		</tr>
+		
 		<tr >
 			<td style="width: 20.0000%;">
 				<br>
@@ -89,64 +125,6 @@
 				<br>· Sharing your voice
 				<br>· Staying informed
 				<br>· Creating a standout resume
-				<br>
-			</td>
-		</tr>
-		<tr style="border-bottom:2px solid #01a1dd;">
-			<td style="width: 20.0000%;">
-				<br>
-			</td>
-			<td class="table--workshops-td" style="width: 80.0000%; padding-bottom:20px;border-bottom:1px solid rgba(1,161,221,0.5);padding-top:10px;"><strong>Conquering Your Career Amidst Crisis</strong>&nbsp;
-				<br>
-				<p>While current times are uncertain, one thing unfortunately isn’t: the unemployment rate. For many who have been laid off or for new college graduates, navigating a chaotic job market adds to already high stress levels. Recruiters and hiring managers know that times are tough and that employment gaps during a pandemic are unavoidable. So, what can new job-seekers do to stand out in a talent pool of thousands who are in the same boat? This webinar will provide attendees with useful data to understand the realities of the current job market while suggesting practical strategies for moving forward with confidence, skill, and optimism.</p>
-<p><strong>About Tricia Zelaya-Leon:</strong></p>
-<p>Tricia Zelaya-Leon earned her Ph.D. in Higher Education and Student Affairs from The Ohio State University in 2011. Her teaching and research interests focus on student identity development theory, the development of second-year college students, engaging students in transition, and infusing career preparation into the academic curriculum.  As the Director of Career Development at Rollins College, Dr. Zelaya-Leon oversees Career Center staff who provide personalized guidance on career discernment, employer engagement, and post-graduate success.</p>
-			</td>
-		</tr>
-		<tr>
-			<td style="width: 20.0000%;padding-top:20px;"><strong>Employers</strong></td>
-			<td class="table--workshops-td" style="width: 80.0000%;padding-top:20px;padding-bottom:10px;border-bottom:1px solid rgba(1,161,221,0.5);"><strong>10 Tips for Interviewing Candidates Virtually (100 seats available)&nbsp;</strong>
-				<br>
-				<br>Job interviews are always challenging, but a virtual interview throws a few more complexities into the mix. The coronavirus is changing the way we conduct our professional lives. A LinkedIn study found that more than half of professionals in the U.S. are now changing their in-person meetings to either phone or video for health and safety reasons. While your questions and conversations may be the same, how you conduct the interview may be different. Join us and learn 10 best practices to get you set up for successful virtual interviews.
-				<br>
-			</td>
-		</tr>
-		<tr>
-			<td style="width: 20.0000%;">
-				<br>
-			</td>
-			<td class="table--workshops-td" style="width: 80.0000%;padding-bottom:20px;border-bottom:1px solid rgba(1,161,221,0.5);padding-top:10px;"><strong>Play the Long Game: A Disney Leadership Journey</strong>
-				<br>
-<p>Business leaders today face unprecedented challenges. An increasingly connected global economy, nonstop technological advances, and rapid demographic shifts are disrupting the business environment on a scale never seen before and we are also in the midst of a global pandemic.  Leaders are being asked to reinvent themselves and their organizations simultaneously. Tried-and-true leadership approaches alone cannot meet this challenge. In the face of this extreme level of change, leaders must either adapt or face the possibility of failure.</p>
-<p>Join us for an interactive and conversational workshop where Dan shares leadership insights and real-life experiences from his various roles at Disney.</p>
-<p>With 26 years of experience with the Walt Disney Company, Dan Cockerell will share his expertise based on his learnings, successes and failures, as well as his perspective on the current pandemic. Dan believes the future is bright and there are many opportunities for those who have a growth mindset, are open to new ideas, and willing to gain diverse experiences.</p>
-<p><strong>About Dan Cockerell (www.dancockerell.com):</strong></p>
-<p>Dan spent 26 years with the Walt Disney Company. He started as a parking attendant at Epcot and worked in 19 different jobs. Dan held various executive operations roles at the Walt Disney World Resort, both in the theme parks and resort hotels, and retired as the Vice President of the Magic Kingdom where he led 12,000 cast members and entertained over 20 million guests annually. After a fulfilling and exciting career Dan made the decision to set out on a new venture and start his own consulting and speaking business.</p>
-				<br>
-			</td>
-		</tr>
-		<tr>
-			<td style="width: 20.0000%;">
-				<br>
-			</td>
-			<td class="table--workshops-td" style="width: 80.0000%;padding-bottom:20px;border-bottom:1px solid rgba(1,161,221,0.5);padding-top:10px;"><strong>10 Tips for Virtual Onboarding of New Staff Members (100 seats available)&nbsp;</strong>
-				<br>
-				<br>Before the rise of this pandemic, an estimated 8 million Americans were working from home, according to a recent Census report. Now millions more have joined them as COVID-19 has created the largest work from home experiment the world has ever seen. Not every company can afford to completely halt their hiring plans, and for some industries, hiring is absolutely essential right now. Virtual recruiting and onboarding is a new way forward. If you’re continuing with hiring plans right now and will be heavily reliant on technology for the onboarding process, join us as we discuss 10 key steps to take to develop and implement a successful virtual onboarding process.
-				<br>
-			</td>
-		</tr>
-		<tr style="border-bottom:2px solid #01a1dd;">
-			<td style="width: 20.0000%;">
-				<br>
-			</td>
-			<td class="table--workshops-td" style="width: 80.0000%;padding-bottom:20px;border-bottom:1px solid rgba(1,161,221,0.5);padding-top:10px;"><strong>Creating Effective Questions for Candidate Interviews</strong>
-				<br>Job interviews are always challenging. Having the right questions to ask a candidate is a good start to a successful interview. This session will provide you with a framework and practical tips you can utilize to have a more successful and productive interview and select the best candidate for your company. During this session, you will:
-				<br>
-				<br>• Complete a mini version of the behavioral preference instrument TetraMap to identify your own natural preference
-				<br>• Define key behaviors that identify preferences in others
-				<br>• Understand how to look at candidates through four (4) different preference “lenses”
-				<br>• Learn how to create interview questions that highlight key skills and talents needed for the role
-				<br>
 				<br>
 			</td>
 		</tr>
@@ -185,19 +163,6 @@
 			</td>
 		</tr>
         <tr>
-			<td style="width: 20.0000%;padding-top:20px;"><strong>Additional Webinars</strong></td>
-			<td class="table--workshops-td" style="width: 80.0000%;padding-top:20px;padding-bottom:10px;border-bottom:1px solid rgba(1,161,221,0.5);"><strong>CARES: Six Critical Steps for Reopening After COVID-19</strong>
-				<br>
-				<p>
-                    Business as usual may look very different after the coronavirus pandemic. As our nation begins to open and we regain our ability to welcome back employees and customers, Health, Safety, and Employee Engagement is of utmost importance, no matter what industry we're in. Join us as Barry Jacobson, a former Disney executive and veteran business leader, shares his version of the CARES (Care, Awareness, Respect, Everybody, and Safety) Act and introduces you to the 6 C’s (Concern/Care, Communicate, Coach, Collaborate, Calibrate, and Celebrate) that will help you focus on key areas to help your organization successfully reopen. 
-				</p>
-                <p style="border-left:4px solid #005ca8;padding-left:5px;padding-top:5px; background:#f7f7f7;">
-                <strong>About Barry Jacobson (www.barryjacobsonconsulting.com):</strong><br>
-                Barry Jacobson is a retired executive from Walt Disney Company with over 37 years of Disney experience. Barry has always had hospitality and guest experience as part of his DNA, from as early as watching his mother host large gatherings at his childhood home to his first role with Disney as a Recreation Host (lifeguard). After spending 37 years with the Walt Disney Company and as a senior executive, Barry has now embarked on his next chapter, consulting and sharing his experiences and knowledge of Disney culture, brand, leadership, hospitality and customer experience. With today’s challenges, companies know that new strategies must be enacted to both stay relevant and to get back into the game.  Barry can help you and your organization create Magic, get the right message, and be inspired.
-                </p>
-			</td>
-		</tr>
-        <tr>
 			<td style="width: 20.0000%;">
 				<br>
 			</td>
@@ -208,65 +173,6 @@
 				<p>Join us for a 90-minute, interactive session to discuss re-boarding your existing staff or onboarding new staff once you re-open your doors. The session will explore potential approaches, suggested practices and offer insight to welcome back staff into a new mindset of service to your customers/guests. While this session will have some key points, the request is participants bring questions and scenarios to share and discuss with the group.</p>
 				<p>About JOR Hospitality Solutions (<a href="https://www.jorhospitalitysolutions.com" target="_blank" alt="www.jorhospitalitysolutions.com" title="www.jorhospitalitysolutions.com">www.jorhospitalitysolutions.com)</a>:<br><br>
 JOR Hospitality Solutions launched in 2019, with Jason Raimondi as the President & Founder. He brings over twenty years of hospitality experience working with companies such as Walt Disney World Resort, Forbes Travel Guide, Hilton Hotels and several other organizations. The company offers exceptional training through engaging instruction while influencing, inspiring and developing hospitality professionals to reach their highest potential of service performance.</p>
-			</td>
-		</tr>
-        <tr>
-			<td style="width: 20.0000%;">
-				<br>
-			</td>
-			<td class="table--workshops-td" style="width: 80.0000%;padding-top:20px;padding-bottom:10px;border-bottom:1px solid rgba(1,161,221,0.5);"><strong>Creating Effective Questions for Candidate Interviews</strong>
-				<br>
-				<p>Job interviews are always challenging. Having the right questions to ask a candidate is a good start to a successful interview. Join CareerSource and TetraMap to learn how to create effective questions for your next candidate interview.</p>
-                <p>
-                This session will provide you with a framework and practical tips you can utilize to have a more successful and productive interview and select the best candidate for your company. During this session, you will:
-                </p>
-                <ul>
-                    <li>Complete a mini version of the behavioral preference instrument TetraMap to identify your own natural preference</li>
-                <li>Define key behaviors that identify preferences in others</li>
-                <li>Understand how to look at candidates through four (4) different preference “lenses”</li>
-                <li>Learn how to create interview questions that highlight key skills and talents needed for the role</li>
-                </ul>
-                <p>
-                Curium Solutions <a href="https://www.curiumsolutions.com" alt="www.curiumsolutions.com" title="www.curiumsolutions.com" target="_blank">(www.curiumsolutions.com)</a><br><br>
-
-                At Curium Solutions, our mission simply put is to empower potential. We do this by putting people first, keeping it simple and making it real. With offices in the US and the UK we have the ability to blend and deliver performance solutions that capitalize on our international insights. Our focus on delivering change, motivating people and evolving your performance really creates value that sticks.
-                </p>
-			</td>
-		</tr>
-        <tr>
-			<td style="width: 20.0000%;">
-				<br>
-			</td>
-			<td class="table--workshops-td" style="width: 80.0000%;padding-top:20px;padding-bottom:10px;border-bottom:1px solid rgba(1,161,221,0.5);"><strong>Master Your Next Interview</strong>
-				<br>
-				<p>Interviews can be stressful. Being prepared is the key. <br><br>Join CareerSource and Curium Solutions to learn how to master your next job interview.
-This session will provide you with a framework and practical tips you can utilize to have a more successful and productive interview. During this session, you will:
-                </p>
-                <ul>
-                    <li>Complete a mini version of the behavioral preference instrument TetraMap to identify your natural preference</li>
-                <li>Define and identify key behaviors for each of the preferences</li>
-                <li>Understand how to apply this knowledge during interviews to showcase your versatility and talents</li>
-                </ul>
-                <p>
-                Curium Solutions <a href="https://www.curiumsolutions.com" alt="www.curiumsolutions.com" title="www.curiumsolutions.com" target="_blank">(www.curiumsolutions.com)</a><br><br>
-
-                At Curium Solutions, our mission simply put is to empower potential. We do this by putting people first, keeping it simple and making it real. With offices in the US and the UK we have the ability to blend and deliver performance solutions that capitalize on our international insights. Our focus on delivering change, motivating people and evolving your performance really creates value that sticks.
-                </p>
-			</td>
-		</tr>
-        <tr>
-			<td style="width: 20.0000%;">
-				<br>
-			</td>
-			<td class="table--workshops-td" style="width: 80.0000%;padding-top:20px;padding-bottom:10px;border-bottom:1px solid rgba(1,161,221,0.5);"><strong>Career Coach Web Resource</strong>
-				<br>
-				<p>Join us as Valencia College provides you with a walk-through of the Career Coach platform and take a six-question career assessment to identify you top interest areas. Learn how to explore careers related to your various interest areas and how to search for job statistics in Central Florida. Career Coach is a free tool and hosted on Valencia's website. Use this link to complete your free assessment before the session: <a href="http://valenciacollege.edu/careercoach" target="_blank" alt="http://valenciacollege.edu/careercoach" title="http://valenciacollege.edu/careercoach">http://valenciacollege.edu/careercoach</a>
-
-                <p>
-                Valencia College <a href="https://www.valenciacollege.edu" alt="www.valenciacollege.edu" title="www.valenciacollege.edu" target="_blank">(www.valenciacollege.edu)</a><br><br>
-
-                From humble beginnings, Valencia College has become an innovative leader in higher education with a reputation for student success. Through a welcoming learning environment and a focus on improving student outcomes, we provide an affordable, quality education to all who apply.
-                </p>
 			</td>
 		</tr>
 	</tbody>
